--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "request-promise": "^3.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "nock": "^8.0.0",
+    "sinon": "^1.17.3"
   }
 }
